--- a/less/style.less
+++ b/less/style.less
@@ -103,6 +103,18 @@
 .j-disable-select {
   .disable-select;
 }
+j-button, j-combofield > input, j-datefield > input, j-colorpicker > input, j-textfield > input, j-passwordfield > input, j-numberfield > input {
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+}
+
+j-button:focus, j-combofield > input:focus, j-datefield > input:focus, j-colorpicker > input:focus, j-textfield > input:focus, j-passwordfield > input:focus, j-numberfield > input:focus {
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  border: 1px solid rgba(81, 203, 238, 1);
+}
 j-button {
   .border-box;
   border: 1px solid #d8d8d8;
@@ -192,10 +204,15 @@ j-numberField input,
 j-passwordField input,
 j-dateField input,
 j-comboField input,
-j-colorPicker input,
-j-textArea textarea {
+j-colorPicker input {
   border: 1px solid #d9d9d9;
   width: 150px;
+  padding: 3px;
+  white-space: normal;
+}
+j-textArea textarea {
+  border: 1px solid #d9d9d9;
+  min-width: 150px;
   padding: 3px;
   white-space: normal;
 }
@@ -260,9 +277,6 @@ j-textArea > * {
 }
 
 /************* comboField *****************/
-j-comboField {
-  position: unset;
-}
 j-comboField > div {
   position: absolute;
   display: none;
@@ -315,9 +329,6 @@ j-modal[belongto=j-comboField] j-table > j-toolbar{
 }
 
 /************* dateField *****************/
-j-dateField {
-  position: unset;
-}
 j-modal[belongto=j-dateField] table, j-datefield table {
   table-layout: fixed;
   width: 210px;
@@ -398,7 +409,7 @@ j-table {
   overflow: auto;
   border: 1px #d9d9d9 solid;
   position: relative;
-  .disable-select;
+  /*.disable-select;*/
   overflow-x: hidden;
   display: inline-block;
   display: -webkit-box;
@@ -427,12 +438,25 @@ j-table-pivot-intersection {
 }
 j-table > div > table {
   border-collapse: collapse;
-  width: 100%;
+  min-width: 100%;
 }
 j-table-pivot-left > table,
 j-table-pivot-top > table,
 j-table-pivot-intersection > table {
   border-collapse: collapse;
+}
+j-table .j-table-sort{
+  display: none;
+  position: absolute;
+  right: 5px;
+  top: 0px;
+  height: 100%;
+  padding-top: 5px;
+  .border-box;
+  cursor: pointer;
+}
+j-table .j-table-sort:after{
+  content: '\25bc'
 }
 j-table > div {
   width: 100%;
@@ -442,6 +466,12 @@ j-table > div {
 /*j-table > .j-table-body > table > tbody > tr > td{
   white-space: normal;
 }*/
+j-table > div > table > thead > tr > th > div{
+  .border-box;
+}
+j-table > div > table > thead > tr > th:hover > div > div{
+  display: block !important;
+}
 j-table > div > table > thead > tr > th,
 j-table-pivot-left > table > thead > tr > th,
 j-table-pivot-top > table > thead > tr > th,
@@ -449,14 +479,20 @@ j-table-pivot-intersection > table > thead > tr > th {
   white-space: nowrap;
 }
 j-table > div > table > tbody > tr > td,
-j-table > div > table > thead > tr > th,
+j-table > div > table > thead > tr > th > div,
 j-table-pivot-left > table > tbody > tr > td,
-j-table-pivot-left > table > thead > tr > th,
+j-table-pivot-left > table > thead > tr > th > div,
 j-table-pivot-top > table > tbody > tr > td,
-j-table-pivot-top > table > thead > tr > th,
+j-table-pivot-top > table > thead > tr > th > div,
 j-table-pivot-intersection > table > tbody > tr > td,
-j-table-pivot-intersection > table > thead > tr > th {
+j-table-pivot-intersection > table > thead > tr > th > div {
   padding: 4px;
+}
+j-table > div > table > thead > tr > th > div,
+j-table-pivot-left > table > thead > tr > th > div,
+j-table-pivot-top > table > thead > tr > th > div,
+j-table-pivot-intersection > table > thead > tr > th > div{
+  position: relative;
 }
 j-table > div > table > tbody > tr:not(:last-child) > td,
 j-table-pivot-left > table > tbody > tr:not(:last-child) > td,
@@ -506,6 +542,14 @@ j-table .j-active {
   background: #fff3a1;
 }
 
+j-pagination .j-itemPerPage > label{
+  width: 0px;
+}
+
+j-pagination .j-itemPerPage > input{
+  width: 30px;
+}
+
 /************* toolbar/pagination *****************/
 j-toolbar,
 j-pagination {
@@ -546,6 +590,9 @@ j-toolbar[type="tab"] j-button {
   padding-bottom: 4px;
   margin-top: 3px;
   padding-bottom: 6px;
+}
+j-toolbar[type="tab"] j-button:hover {
+  .linear-gradient(#f8f8f8, #ffffff);
 }
 j-table > j-toolbar {
   border: 0;
@@ -599,6 +646,11 @@ j-pagination .j-gotopage input {
   border-right: 0;
   border-left: 0;
   border-bottom: 0;
+}
+
+j-hslider > div > j-toolbar{
+  overflow: visible;
+  padding: 4px 0;
 }
 
 /************* layout *****************/
@@ -764,13 +816,14 @@ j-modal {
   font-family: helvetica,arial,verdana,sans-serif;
   font-size: 12px;
   line-height: 18px;
+  overflow: hidden;
 }
 
-j-modal[title]{
-  padding-top: 30px;
+j-modal[title] {
+  padding-top: 0px;
 }
 
-j-modal[title]::after{
+/*j-modal[title]::after {
   .border-box;
   padding: 10px;
   content:attr(title);
@@ -780,4 +833,360 @@ j-modal[title]::after{
   top: 0;
   white-space: nowrap;
   width: 100%;
+}*/
+
+/*j-modal[app=true] .j-modal-title{
+  background:
+}*/
+
+j-modal .j-modal-title{
+  background: #fff;
+  border: 0px;
+  padding: 9px 15px 9px 0 !important;
+  border-bottom: 1px solid #53ABE6;
+  margin-bottom: 10px;
+  cursor: move;
+}
+
+j-modal .j-modal-window-controls{
+  font-size: 14px;
+  font-weight: 300 !important;
+  position: absolute;
+  right: 10px;
+  top: 3px;
+  position: absolute;
+  right: 10px;
+  top: 8px;
+}
+
+j-modal .j-modal-window-controls > *{
+  cursor: pointer;
+}
+
+j-modal[app=true]{
+  border: 1px solid #D9D9D9;
+  //padding:0px;
+}
+
+j-modal[mask=true]:before{
+  content: "";
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+/*j-modal[app=true]:before{
+  border: 1px solid #d9d9d9;
+  content: "";
+  display: block;
+  height: 100%;
+  left: -10px;
+  padding: 10px;
+  position: absolute;
+  top: -10px;
+  width: 100%;
+  background: #F7F7F9;
+}*/
+
+/************* j-hslider *****************/
+j-hslider {
+  display: -moz-box;
+  display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  flex-direction: row;
+  background: #f7f7f9;
+  border: 1px solid #d9d9d9;
+  .border-box;
+  overflow: hidden;
+  min-height: 36px;
+}
+
+j-hslider > div {
+  flex: 1 1 0;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  overflow: hidden;
+}
+
+j-hslider > i:first-child {
+  align-self: center;
+  height: 100%;
+  padding: 4px 8px 4px 4px;
+  border-right: 1px;
+  cursor: pointer;
+}
+
+j-hslider > i:last-child {
+  align-self: center;
+  height: 100%;
+  padding: 4px 4px 4px 8px;
+  cursor: pointer;
+}
+
+j-hslider > div > * {
+  border: 0px none !important;
+}
+
+/************* tooltip *****************/
+[tooltip]:hover:after{
+    background: #333;
+    background: rgba(0,0,0,.8);
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(tooltip);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+}
+
+[tooltip]:hover:before{
+    border: solid;
+    border-color: #333 transparent;
+    border-width: 6px 6px 0 6px;
+    bottom: 20px;
+    content: "";
+    left: 20%;
+    position: absolute;
+    z-index: 99;
+    margin-left: 20px;
+}
+
+/************* drag *****************/
+j-drag{
+  border: 1px dashed #3079ED;
+  position: absolute;
+  display: block;
+  .border-box;
+  cursor: move;
+}
+
+/************* resize *****************/
+j-resize {
+    bottom: 0;
+    cursor: nwse-resize !important;
+    height: 7px;
+    position: absolute;
+    right: 0;
+    width: 7px;
+    z-index: 100;
+}
+j-resize::after {
+    border-bottom: 1px solid #a7adad;
+    border-right: 1px solid #a7adad;
+    bottom: 2px;
+    content: "";
+    display: block;
+    height: 5px;
+    position: absolute;
+    right: 2px;
+    width: 5px;
+}
+j-resize[direction="horizontal"]{
+  height: 100%;
+  cursor: ew-resize !important;
+}
+j-resize[direction="horizontal"]::after{
+  border-bottom: 0px solid #a7adad;
+  border-right: 1px solid #a7adad;
+  bottom: 50%;
+  top: 50%;
+  content: "";
+  display: block;
+  height: 10px;
+  position: absolute;
+  right: 2px;
+  width: 5px;
+}
+j-resize[direction="vertical"]{
+  width: 100%;
+  cursor: ns-resize !important;
+}
+j-resize[direction="vertical"]{
+
+}
+
+/************* tree *****************/
+j-tree i.fa-plu-square-os, j-tree i.fa-plus-square-o{
+  margin-right: 3px;
+  font-size: 14px !important;
+}
+
+/************* gantt *****************/
+j-gantt{
+  display: block;
+  flex: 1 1 0;
+}
+j-gantt i.fa-minus-square-o, j-gantt i.fa-plus-square-o{
+  margin-right: 3px;
+  font-size: 14px !important;
+  cursor: pointer;
+}
+
+j-gantt > .j-table-body > table{
+  border-collapse: collapse;
+  width: 100%;
+}
+
+j-gantt > .j-table-body > table > thead > tr > th > div:not(:last-child){
+  border-bottom: 1px solid #d9d9d9;
+}
+
+j-gantt > .j-table-body > table > tbody > tr{
+  font-size: 0;
+}
+
+j-gantt > .j-table-body > table > thead > tr > th:last-child{
+  text-align: left;
+}
+
+j-gantt > .j-table-body > table > thead > tr > th:last-child > div > div{
+  text-align: center;
+}
+
+j-gantt > .j-table-body > table > tbody > tr > td:nth-child(2), j-gantt > .j-table-body > table > thead > tr > th:nth-child(2){
+  .font;
+  line-height: 22px;
+}
+
+j-gantt > .j-table-body > table > tbody > tr > td, j-gantt > .j-table-body > table > thead > tr > th{
+  border: 1px solid #d9d9d9;
+  max-width: 250px;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0px;
+}
+
+j-gantt > .j-table-body > table > thead > tr > th{
+  background: #F7F7F9;
+  border: 1px solid #d9d9d9;
+}
+
+j-gantt > .j-table-body > table > thead > tr > th:first-child{
+  width: 250px;
+}
+
+j-gantt .j-gantt-grid{
+  display: inline-block;
+  width: 56px;
+  height: 22px;
+  .border-box;
+  .font;
+  border-right: 1px solid #D9D9D9;
+  position: relative;
+}
+
+j-gantt .j-gantt-grid:last-child{
+  border-right: 0px;
+}
+
+j-gantt .j-gantt-bar{
+  position: absolute;
+  height: 15px;
+  border: 1px solid #7BA3ED;
+  /*background: #C7D8F7;*/
+  .border-box;
+  text-align: center;
+  .font;
+  line-height: unset;
+  cursor: move !important;
+}
+
+j-gantt .j-gantt-bar::after{
+  content: attr(warning);
+  position: absolute;
+  left: 100%;
+  margin-left: 5px;
+  color: #F86466;
+  z-index: 1000;
+  background: #fff;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+j-gantt .j-gantt-bar .j-gantt-progress{
+  background: #01169b;
+  #transform > .opacity(0.25);
+  position: absolute;
+  height: 100%;
+  left: 0;
+}
+
+.j-gantt-disable{
+  background: #707F8C;
+}
+
+/*.j-gantt-disable .j-gantt-progress {
+  display: none;
+}*/
+
+j-gantt .j-gantt-flag{
+  height: 100%;
+  right: 0%;
+  position: absolute;
+  width: 2px;
+  z-index: 1000;
+}
+
+j-gantt .j-gantt-flag > div {
+  background: inherit;
+  display: inline-block;
+  font-size: 12px;
+  line-height: 18px;
+  opacity: 0.8;
+  padding: 0 3px;
+  #transform > .opacity(0.8);
+}
+
+j-gantt .j-gantt-milestone{
+  background: #000 none repeat scroll 0 0;
+  bottom: -1px;
+  display: block;
+  height: 2px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}
+
+j-gantt .j-gantt-milestone:after{
+  border-style: solid solid none;
+  border-width: 5px 5px 0;
+  border-top: 5px solid black;
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  border-bottom: 0px;
+  background: transparent;
+  bottom: -4px;
+  content: "";
+  height: 0;
+  position: absolute;
+  left: 0;
+  width: 0;
+}
+
+j-gantt .j-gantt-milestone:before{
+  border-style: solid solid none;
+  border-width: 5px 5px 0;
+  border-top: 5px solid black;
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  border-bottom: 0px;
+  background: transparent;
+  bottom: -4px;
+  content: "";
+  height: 0;
+  position: absolute;
+  right: 0;
+  width: 0;
+}
+
+/************* editor *****************/
+
+j-editor .wysiwyg-container{
+	display: inline-block;
+	border: 1px solid #d9d9d9;
 }
