Add timefield and fixing j-editor
Add timefield and fixing j-editor

--- a/less/style.less
+++ b/less/style.less
@@ -174,12 +174,14 @@ j-button[color="red"]:active {
 
 /************* textfield/numberField/passwordField/dateField/comboField/textArea *****************/
 j-textField,
+j-timeField,
 j-numberField,
 j-passwordField,
 j-dateField,
 j-comboField,
 j-colorPicker,
-j-textArea {
+j-textArea,
+j-editor {
   .border-box;
   .font;
   margin: 2px;
@@ -188,11 +190,13 @@ j-textArea {
   white-space: nowrap;
 }
 j-textField label,
+j-timeField label,
 j-numberField label,
 j-passwordField label,
 j-dateField label,
 j-comboField label,
 j-colorPicker label,
+j-editor label,
 j-textArea label {
   width: 125px;
   display: inline-block;
@@ -200,6 +204,7 @@ j-textArea label {
   .font;
 }
 j-textField input,
+j-timeField input,
 j-numberField input,
 j-passwordField input,
 j-dateField input,
@@ -217,6 +222,7 @@ j-textArea textarea {
   white-space: normal;
 }
 j-textField[icon] input,
+j-timeField[icon] input,
 j-numberField[icon] input,
 j-passwordField[icon] input,
 j-dateField[icon] input,
@@ -226,6 +232,7 @@ j-colorPicker[icon] input {
   width: 135px;
 }
 j-textField > i,
+j-timeField > i,
 j-numberField > i,
 j-passwordField > i,
 j-dateField > i,
@@ -239,6 +246,7 @@ j-colorPicker > i {
   position: absolute;
 }
 .j-table-inplace-form > j-textField > i,
+.j-table-inplace-form > j-timeField > i,
 .j-table-inplace-form > j-numberField > i,
 .j-table-inplace-form > j-passwordField > i,
 .j-table-inplace-form > j-dateField > i,
@@ -248,7 +256,7 @@ j-colorPicker > i {
   top: 0;
   margin-left: -13px;
 }
-j-textArea > * {
+j-textArea > *, j-editor > * {
   vertical-align: top;
 }
 
@@ -1189,4 +1197,34 @@ j-gantt .j-gantt-milestone:before{
 j-editor .wysiwyg-container{
 	display: inline-block;
 	border: 1px solid #d9d9d9;
+}
+
+/************* timefield *****************/
+
+j-timefield input{
+	width: 30px;
+}
+
+[belongto=j-timeField] > table {
+  border-collapse: collapse;
+}
+
+[belongto=j-timeField] > table tr:nth-child(1) td, [belongto=j-timeField] > table tr:nth-child(4) td {
+  border-bottom: 1px solid #53abe6;
+  text-align: center;
+}
+
+[belongto=j-timeField] > table tr:nth-child(2) td:hover, [belongto=j-timeField] > table tr:nth-child(3) td:hover, [belongto=j-timeField] > table tr:nth-child(5) td:hover {
+  background: #d6e8f6;
+}
+
+[belongto=j-timeField] > table td {
+  padding: 4px;
+  width: 30px;
+  text-align: center;
+  cursor: pointer;
+}
+
+[belongto=j-timeField] > table td.j-active {
+  background: #fff3a1;
 }
